// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-opacity-transition Default 1`] = `
<div>
  <div
    class="m-u--margin-bottom"
  >
    <button
      class="m-button m--is-skin-primary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        
                    Hide icon
                 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m-u--margin-left m--is-skin-secondary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        
                    Disabled transition
                 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </div>
   
  <svg
    aria-hidden="true"
    class="m-icon"
    height="20px"
    width="20px"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
   
  <!---->
</div>
`;

exports[`Storyshots components|m-opacity-transition zoom-effect="false" 1`] = `
<div>
  <div>
    <button
      class="m-button m--is-skin-primary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        
                    Hide icon
                 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </div>
   
  <svg
    aria-hidden="true"
    class="m-icon m-u--margin-top"
    height="20px"
    width="20px"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
</div>
`;
